<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".MainActivity">
  <item
    android:id="@+id/toolbar_menu_help"
    android:icon="@android:drawable/ic_menu_help"
    android:title="@string/help"
    app:showAsAction="never" />
  <item
    android:id="@+id/toolbar_menu_refresh"
    android:icon="@android:drawable/ic_popup_sync"
    android:title="@string/refresh"
    app:showAsAction="never" />
  <item
    android:id="@+id/toolbar_menu_switch_unit"
    android:icon="@android:drawable/ic_menu_revert"
    android:title="@string/toolbar_menu_switch_unit_template"
    app:showAsAction="never"
    tools:title="switch to ˚F" />
</menu>
